--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ntihinduka Elissa | Software Developer</title>
+    <title>Ntihinduka Elissa </title>
     <meta name="description" content="Portfolio of Ntihinduka Elissa, a Full Stack Developer from Rwanda specializing in web development with modern technologies." />
     <meta name="author" content="Ntihinduka Elissa" />
 
